add a new object to appsettings.json

--- a/PB/appsettings.json
+++ b/PB/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ContactConn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PB;Integrated Security=True;"
-  }
+  },
+  "test": "test1"
 
 }
